<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:ignore="NamespaceTypo">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/relate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_marginTop="20dp"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:background="@color/white"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <RelativeLayout
                android:id="@+id/related"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/profile_image">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/id"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/design_default_color_primary"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:ignore="SmallSp" />


                <TextView
                    android:id="@+id/candidate_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_toEndOf="@+id/name"
                    android:text="@string/sssf"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/design_default_color_primary"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/names"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/candidate_name"
                    android:text="@string/Name"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/candidate_name"
                    android:layout_toEndOf="@+id/names"
                    android:text="@string/Name"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:ignore="SmallSp" />


                <TextView
                    android:id="@+id/dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/names"
                    android:text="@string/dob"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/d_o_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/names"
                    android:layout_toEndOf="@+id/dob"
                    android:text="@string/dob"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:ignore="SmallSp" />


                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dob"
                    android:gravity="center"
                    android:text="@string/mail"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/emails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dob"
                    android:layout_toEndOf="@id/email"
                    android:gravity="center"
                    android:text="@string/ddd"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:gravity="center"
                    android:text="@string/Address"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/Adresses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emails"
                    android:layout_toEndOf="@id/address"
                    android:gravity="center"
                    android:text="@string/ddd"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/genders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Adresses"
                    android:layout_toEndOf="@id/gender"
                    android:gravity="center"
                    android:text="@string/ddd"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:ignore="SmallSp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/realate3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_below="@+id/related"
                android:layout_toEndOf="@+id/profile_image">

                <TextView
                    android:id="@+id/Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/mobile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/Phone"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/landPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/mobile_number"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:ignore="SmallSp" />

                <TextView
                    android:id="@+id/OfficePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/landPhone"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:ignore="SmallSp" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>